fixed spacing to sections, changed highlighted colour to blue and text colour to dark blue

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $grad-blue: #42638f;
 $grad-dark-blue: #2b366e;
 $grad-darker-blue: #1d1a7b;
 $grad-darkest-blue: #172783;
-$selected: #c172a0;
+$selected: #004f9e;
 $pink: #eebddc;
 $black: #1B1B1E;
 $light: rgb(232, 245, 248);
