--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -12,7 +12,7 @@
 
 body {
   background-color: whitesmoke;
-  color: black;
+  color: vars.$dark-blue;
   width: 100%;
   position: relative;
   overscroll-behavior-y: none;
@@ -29,10 +29,21 @@ h1 {
 
 h2 {
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 
 p {
   line-height: 170%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.highlight {
+  color: vars.$selected;
+  font-weight: 600;
 }
 
 @media (min-width: 768px) {
