--- a/styles/layout/_skills.scss
+++ b/styles/layout/_skills.scss
@@ -2,6 +2,8 @@
 @use '../abstracts/variables' as vars;
 
 section#skills {
+  margin: 2rem 0;
+
   .card-and-button-container {
     @include mixin.flex-col;
     gap: 1rem;
