--- a/styles/style.scss
+++ b/styles/style.scss
@@ -39,18 +39,3 @@
 .section-title {font-size: 3rem;}
 
 .hide {opacity: 0;}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.highlight {
-  color: var(--selected);
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.project-all h2, .music-all h2, .about-card h3, .album-card-overlay {text-align: center;}
